# fdbus

./: Android.bp  CMakeLists.txt  CMakePresets.json  README.md  cmakeconfig.sh  fdbus-name-server.rc
cmake/: CMakeLists.txt  clib.cmake  example.cmake  jni.cmake  rule_base.cmake  service.cmake
cmake/pb-example/: CMakeLists.txt  example.cmake
example/config/: fdbus.fdb  host.fdb
example/config/server/: my.server.name.fdb  my.server.name_1.fdb
example/file-downloader/: fcpd.cpp
example/object/: client_server_object.cpp
example/pki/: ca.crt  ca_rsa_private.pem  server.crt  server.csr  server_rsa_private.pem
fdbus/: CBaseClient.cpp  CFdbBaseObject.cpp  CFdbMessage.cpp
log/: CLogProducer.cpp  fdb_log_config.cpp  fdb_log_config.h  main_log_client.cpp  main_log_server.cpp
platform/socket/: CGenericClientSocket.cpp
platform/socket/sckt-0.5/: sckt.cpp
security/: CApiSecurityConfig.cpp  CFdbToken.cpp  CFdbusSecurityConfig.cpp  CFdbusSecurityConfig.h  CHostSecurityConfig.cpp  CHostSecurityConfig.h  CServerSecurityConfig.cpp  CServerSecurityConfig.h
server/: CInterHostProxy.cpp  CNameProxyContainer.h  main_ld.cpp  main_lh.cpp  main_ls.cpp
worker/: CSysFdWatch.cpp
